--- a/index-3.html
+++ b/index-3.html
@@ -582,7 +582,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
-                                <div class="best-online-doc-forum-area">
+                                <div class="best-online-doc-forum-area stickyx">
                                     <h3 class="title">Forums</h3>
                                     <div class="forum-form">
                                         <form action="" class="rt-form-container">
